# OTTO2022

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
scripts/: bpr_train.py  eda001.py  exp000.py  exp001.py  exp002.py  exp003.py  exp005.py  exp006.py  late-exp007.py  late-exp008.py  late-exp009.py  late-exp010.py  late-exp011.py  train.py  word2vec_train.py
src/: constants.py
src/configs/: factory.py
src/data/: factory.py
src/losses/: factory.py
src/metrics/: factory.py
src/optimizer/: factory.py
src/tasks/: base.py
src/utils/: logger.py  memory.py  metrics.py  parse.py  transform.py
